ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/RealWorld/parserharness/input.ts.stderr
error: Expected {, got module
    --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/RealWorld/parserharness/input.ts:1415:12
     |
1415 |     export module TestCaseParser {
     |            ^^^^^^

